// *****************************************************************************
//
// This file is part of a MASA library or program.
// Refer to the included end-user license agreement for restrictions.
//
// Copyright (c) 2010 MASA Group
//
// *****************************************************************************

import "common.proto";
import "client_simulation.proto";
import "version.proto";

package sword;

/** @internal
 *  @addtogroup Launcher
 *  @{
 */

/** @struct ConnectionRequest
    @brief Defines a request connection to launcher
*/
message ConnectionRequest {
   required ProtocolVersion client_version = 1; //!< launcher client version, used to check compatibility
}

/** @struct ExerciseListRequest
    @brief retrieve list of exercises available on launcher
*/
message ExerciseListRequest {}

/** @struct SessionListRequest
    @brief retrieve session list for an exercise
*/
message SessionListRequest {
    required string exercise = 1; //!< exercise from which to list sessions
}

message SessionParameter {
    required string key   = 1;
    required string value = 2;
}

/** @struct SessionStartRequest
    @brief start a session using the given exercise/session.
*/
message SessionStartRequest {
    enum Type {
        simulation = 0; //!< starts a simulation. Starts an embedded dispatcher if specified in session.
        dispatch   = 1; //!< starts a dispatcher.
        replay     = 2; //!< starts a replayer.
    }
    required string exercise               = 1;                          //!< exercise to be started
    required string session                = 2 [ default = "default" ];  //!< session name (created with default parameters if it does not exist)
    required Type   type                   = 3;                          //!< type of exercise session to start
    optional string checkpoint             = 4;                          //!< load the specified checkpoint
    repeated SessionParameter   parameter  = 5;                          //!< list of overloaded session parameters
}

/** @struct SessionStopRequest
    @brief stop a given running session
*/
message SessionStopRequest {
    required string exercise = 1;                         //!< exercise to stop
    required string session  = 2 [ default = "default" ]; //!< session to stop
}

/** @struct ProfileListRequest
    @brief retrieve list of profiles for a given exercise
*/
message ProfileListRequest {
    required string exercise = 1; //!< exercise to list profiles from
}

/** @struct ConnectedProfileListRequest
    @brief retrieve list of connected profiles for a given exercise/session
*/
message ConnectedProfileListRequest {
    required string exercise = 1;                         //!< exercise to list connected profiles from
    required string session  = 2 [ default = "default" ]; //!< session to list connected profiles from
}

/** @struct SessionParameterChangeRequest
    @brief change session parameters
*/
message SessionParameterChangeRequest {
    required string exercise             = 1;                         //!< exercise to change parameter from
    required string session              = 2 [ default = "default" ]; //!< session to change parameter from
    optional uint32 checkpoint_frequency = 3;                         //!< if set, change checkpoint frequency
    optional uint32 acceleration_factor  = 4;                         //!< if set, change acceleration factor
}

/** @struct SessionCommandExecutionRequest
    @brief request command execution to running session
*/
message SessionCommandExecutionRequest {
    required string     exercise        = 1;                         //!< exercise to send command to
    required string     session         = 2 [ default = "default" ]; //!< session to send command to
    optional string     save_checkpoint = 3;                         //!< if set, save a checkpoint with specified name or default (timestamp)
    optional bool       set_running     = 4;                         //!< if set to false, send a pause command; if set to true, set a resume command
    optional DateTime   time_change     = 5;                         //!< if set, change exercise time
}

/** @struct CheckpointListRequest
    @brief retrieve list of checkpoints for a given exercise/session
*/
message CheckpointListRequest {
    required string exercise = 1;                         //!< exercise to list checkpoint from
    required string session  = 2 [ default = "default" ]; //!< session to list checkpoint from
}

/** @struct CheckpointDeleteRequest
    @brief delete checkpoint for a given exercise/session
*/
message CheckpointDeleteRequest {
    required string exercise   = 1;                         //!< exercise to delete checkpoint from
    required string session    = 2 [ default = "default" ]; //!< session to delete checkpoint from
    repeated string checkpoint = 3;                         //!< delete all checkpoints if not specified
}

/** @struct SessionNotification
    @brief notification to specified exercise/session
*/
message SessionNotificationRequest {
    message DirectoryChange {}
    message Notification {
        optional DirectoryChange    directory_change = 1;
    }
    required string         exercise      = 1; //!< exercise to send notification to
    required string         session       = 2; //!< session to send notification to
    required Notification   notification  = 3; //!< notifiaction to send
}

message AdminToLauncher {
    message Content {
        optional ConnectionRequest              connection_request                = 1;
        optional SessionStartRequest            session_start_request             = 2;
        optional SessionStopRequest             session_stop_request              = 3;
        optional ExerciseListRequest            exercise_list_request             = 4;
        optional SessionListRequest             session_list_request              = 5;
        optional ProfileListRequest             profile_list_request              = 6;
        optional ConnectedProfileListRequest    connected_profile_list_request    = 7;
        optional SessionParameterChangeRequest  session_parameter_change_request  = 8;
        optional SessionCommandExecutionRequest session_command_execution_request = 9;
        optional CheckpointListRequest          checkpoint_list_request           = 10;
        optional CheckpointDeleteRequest        checkpoint_delete_request         = 11;
        optional SessionNotificationRequest     session_notification              = 12;
    }
    optional int32   context = 1;
    required Content message = 2;
}

/** @}*/
